[package]
name = "proto_schema_plugin"
version = "0.7.2"
edition = "2021"
license = "MIT"
description = "A schema plugin for proto, with TOML support."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_core = { version = "0.12.2", path = "../core" }
once_cell = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
tokio = { workspace = true }
