[package]
name = "proto_schema_plugin"
version = "0.8.1"
edition = "2021"
license = "MIT"
description = "A schema plugin for proto, with TOML support."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
serde = { workspace = true }

# [dev-dependencies]
# starbase_sandbox = { workspace = true }
# tokio = { workspace = true }
