[package]
name = "proto_schema_plugin"
version = "0.11.5"
edition = "2021"
license = "MIT"
description = "DEPRECATED: Utilities for working with proto's TOML plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
serde = { workspace = true }
