[package]
name = "proto_shim"
version = "0.7.2"
edition = "2024"
license = "MIT"
description = "Utilities for working with proto shims."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = [
	# "Win32_System_Console",
	"Win32_System_Threading",
] }
