[package]
name = "proto_shim"
version = "0.7.7"
edition = "2024"
license = "MIT"
description = "Utilities for working with proto shims."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
rust-version = "1.85.0"

[dependencies]
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", default-features = false, features = [
	"Win32_System_Console",
	"Win32_System_Threading",
] }
