[package]
name = "system_env"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Information about the system environment: operating system, architecture, package manager, etc."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
regex = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic"]
