[package]
name = "version_spec"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A specification for working with partial, full, or aliased versions."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
human-sort = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
