[package]
name = "version_spec"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "A specification for working with partial, full, or aliased versions. Supports semver and calver."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
compact_str = { workspace = true }
human-sort = { workspace = true }
regex = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic"]
