[package]
name = "warpgate_api"
version = "0.15.1"
edition = "2024"
license = "MIT"
description = "APIs for working with Warpgate plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.8.0", path = "../system-env" }
anyhow = { workspace = true }
derive_setters = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic", "system_env/schematic"]
