[package]
name = "warpgate_pdk"
version = "0.14.1"
edition = "2024"
license = "MIT"
description = "Reusable WASM macros and functions for plugin developer kits."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
warpgate_api = { version = "0.15.2", path = "../warpgate-api" }
extism-pdk = { workspace = true }
serde = { workspace = true }
