[package]
name = "warpgate_pdk"
version = "0.16.0"
edition = "2024"
license = "MIT"
description = "Reusable WASM macros and functions for plugin developer kits."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"
rust-version = "1.85.0"

[dependencies]
warpgate_api = { version = "0.17.0", path = "../warpgate-api" }
extism-pdk = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
	"registry",
] }

[dev-dependencies]
warpgate_pdk = { path = ".", features = ["tracing"] }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
