[package]
name = "warpgate"
version = "0.23.10"
edition = "2024"
license = "MIT"
description = "Download, resolve, and manage Extism WASM plugins."
repository = "https://github.com/moonrepo/proto"

[dependencies]
system_env = { version = "0.8.0", path = "../system-env" }
warpgate_api = { version = "0.13.4", path = "../warpgate-api" }
async-trait = { workspace = true }
compact_str = { workspace = true }
extism = { workspace = true, features = ["http"] }
http-cache-reqwest = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
reqwest-middleware = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-netrc = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
starbase_archive = { workspace = true }
starbase_utils = { workspace = true, features = ["glob", "net"] }
starbase_styles = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Enabling certs for extism!
ureq = { version = "3.0.11", features = ["rustls", "platform-verifier"] }

[dev-dependencies]
starbase_sandbox = { workspace = true }

[features]
default = []
schematic = ["dep:schematic", "system_env/schematic", "warpgate_api/schematic"]
