[package]
name = "warpgate"
version = "0.30.2"
edition = "2024"
license = "MIT"
description = "Download, resolve, and manage Extism WASM plugins."
repository = "https://github.com/moonrepo/proto"
rust-version = "1.89.0"

[dependencies]
system_env = { version = "0.10.0", path = "../system-env" }
warpgate_api = { version = "0.17.4", path = "../warpgate-api" }
async-trait = { workspace = true }
base64 = "0.22.1"
compact_str = { workspace = true }
docker_credential = { workspace = true }
extism = { workspace = true, features = ["http"] }
http-cache-reqwest = { workspace = true }
miette = { workspace = true, optional = true }
oci-client = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "query", "rustls"] }
reqwest-middleware = { workspace = true, features = [
	"json",
	"query",
	"rustls",
] }
reqwest-retry = "0.9.1"
rust-netrc = "0.1.2"
rustc-hash = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema"] }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
starbase_archive = { workspace = true }
starbase_shell = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true, features = ["glob", "net"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

# Enabling certs for extism!
ureq = { version = "3.3.0", features = ["rustls", "platform-verifier"] }

[dev-dependencies]
starbase_sandbox = { workspace = true }

[features]
default = []
miette = ["dep:miette"]
schematic = ["dep:schematic", "system_env/schematic", "warpgate_api/schematic"]
