[package]
name = "proto_wasm_plugin"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Utilities for working with proto's WASM plugins."
homepage = "https://moonrepo.dev/proto"
repository = "https://github.com/moonrepo/proto"

[dependencies]
proto_pdk_api = { version = "0.4.2", path = "../pdk-api" }
extism = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
