[package]
name = "proto_api_usage"
version = "0.0.1"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
proto_pdk = { path = "../../crates/pdk" }
extism-pdk = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { path = "../../crates/pdk-test-utils" }
starbase_sandbox = "*"
tokio = { workspace = true }
